--- a/hello.html
+++ b/hello.html
@@ -17,9 +17,16 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<!-- Ma description -->
 		<div> 
-			<p> GIT generation </p>
+		    <h1> Ma Description </h1>
+			<p> GIT generation, Idir Ait-Bachir. Formation GIT </p>
 		</div>
 		
+		<!-- Récompense -->
+		<div> 
+		    <h1> Mes Récompenses </h1>
+			<p> En construction ... </p>
+		</div>
 	
 </body></html>
