--- a/hello.html
+++ b/hello.html
@@ -28,5 +28,12 @@
 		    <h1> Mes Récompenses </h1>
 			<p> En construction ... </p>
 		</div>
+		
+		<!-- Gist -->
+		<div> 
+		    <h1> Mon Gist </h1>
+			<p> <script src="https://gist.github.com/idirbachir/af4540ea873e0cd486f80130d662cff7.js"></script> </p>
+		</div>
+		
 	
 </body></html>
