--- a/hello.html
+++ b/hello.html
@@ -26,7 +26,7 @@
 		<!-- Récompense -->
 		<div> 
 		    <h1> Mes Récompenses </h1>
-			<p> En construction ... </p>
+			<p> <img src="image\medal_bronze.png"> </p>
 		</div>
 		
 		<!-- Gist -->
